--- a/FuelStationApp/App.config
+++ b/FuelStationApp/App.config
@@ -13,6 +13,65 @@
       <setting name="RegisterBonusSkins" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="DefaultAppSkin" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="DefaultPalette" serializeAs="String">
+        <value>Custom/Custom Palette #1</value>
+      </setting>
+      <setting name="TouchUI" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="CompactUI" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="TouchScaleFactor" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="DirectX" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="RegisterUserSkins" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="FontBehavior" serializeAs="String">
+        <value>UseSegoeUI</value>
+      </setting>
+      <setting name="DefaultAppFont" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="CustomPaletteCollection" serializeAs="Xml">
+        <value>
+          <CustomPaletteCollection>
+            <Skin Name="Basic">
+              <SvgPalette Name="Custom Palette #1">
+                <SvgColor Name="Paint" Value="240,240,240" />
+                <SvgColor Name="Paint High" Value="255,255,255" />
+                <SvgColor Name="Paint Shadow" Value="$Control" />
+                <SvgColor Name="Paint Deep Shadow" Value="210,210,210" />
+                <SvgColor Name="Brush" Value="Black" />
+                <SvgColor Name="Brush High" Value="40,40,40" />
+                <SvgColor Name="Brush Light" Value="120,120,120" />
+                <SvgColor Name="Brush Major" Value="160,160,160" />
+                <SvgColor Name="Brush Minor" Value="200,200,200" />
+                <SvgColor Name="Accent Paint" Value="Purple" />
+                <SvgColor Name="Accent Paint Dark" Value="84,79,118" />
+                <SvgColor Name="Accent Paint Light" Value="DarkOrange" />
+                <SvgColor Name="Accent Paint Lighter" Value="229,227,244" />
+                <SvgColor Name="Accent Brush" Value="255,255,255" />
+                <SvgColor Name="Accent Brush Light" Value="180,177,205" />
+                <SvgColor Name="Red" Value="208,49,68" />
+                <SvgColor Name="Green" Value="56,152,83" />
+                <SvgColor Name="Blue" Value="78,138,200" />
+                <SvgColor Name="Yellow" Value="241,151,63" />
+                <SvgColor Name="Black" Value="108,109,117" />
+                <SvgColor Name="Gray" Value="191,191,194" />
+                <SvgColor Name="White" Value="255,255,255" />
+              </SvgPalette>
+            </Skin>
+          </CustomPaletteCollection>
+        </value>
+      </setting>
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
   <startup>
