--- a/FuelStationApp/App.config
+++ b/FuelStationApp/App.config
@@ -5,6 +5,11 @@
       <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  <connectionStrings>
+    <add name="FuelStationApp.Properties.Settings.FuelStationDBConnectionString"
+      connectionString="Data Source=DESKTOP-RBO4TE8;Initial Catalog=FuelStationDB;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DPIAwarenessMode" serializeAs="String">
