--- a/FuelStationApp/FuelStationApp.csproj
+++ b/FuelStationApp/FuelStationApp.csproj
@@ -88,6 +88,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="WUI\AddForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WUI\AddForm.Designer.cs">
+      <DependentUpon>AddForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="WUI\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +115,9 @@
       <DependentUpon>WizardForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\licenses.licx" />
+    <EmbeddedResource Include="WUI\AddForm.resx">
+      <DependentUpon>AddForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="WUI\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -150,6 +159,48 @@
     <Content Include="Custom-Icon-Design-Pretty-Office-8-Gas-pump.ico" />
     <Content Include="Queries\AccountCredentialsSelect.sql" />
     <Content Include="Queries\DeleteCustomer.sql" />
+    <None Include="Resources\showproduct_16x161.png" />
+    <None Include="Resources\showproduct_32x321.png" />
+    <None Include="Resources\open_16x16.png" />
+    <None Include="Resources\open_32x32.png" />
+    <None Include="Resources\delete_16x164.png" />
+    <None Include="Resources\delete_32x324.png" />
+    <None Include="Resources\add_16x165.png" />
+    <None Include="Resources\add_32x325.png" />
+    <None Include="Resources\save_16x164.png" />
+    <None Include="Resources\save_32x324.png" />
+    <None Include="Resources\save_16x163.png" />
+    <None Include="Resources\save_32x323.png" />
+    <None Include="Resources\save_16x162.png" />
+    <None Include="Resources\save_32x322.png" />
+    <None Include="Resources\save_16x161.png" />
+    <None Include="Resources\save_32x321.png" />
+    <None Include="Resources\save_16x16.png" />
+    <None Include="Resources\save_32x32.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_16x165.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_32x325.png" />
+    <None Include="Resources\showproduct_16x16.png" />
+    <None Include="Resources\showproduct_32x32.png" />
+    <None Include="Resources\delete_16x163.png" />
+    <None Include="Resources\delete_32x323.png" />
+    <None Include="Resources\add_16x164.png" />
+    <None Include="Resources\add_32x324.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_16x164.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_32x324.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_16x163.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_32x323.png" />
+    <None Include="Resources\delete_16x162.png" />
+    <None Include="Resources\delete_32x322.png" />
+    <None Include="Resources\add_16x163.png" />
+    <None Include="Resources\add_32x323.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_16x162.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_32x322.png" />
+    <None Include="Resources\delete_16x161.png" />
+    <None Include="Resources\delete_32x321.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_16x161.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_32x321.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_16x16.png" />
+    <None Include="Resources\showallsubtotalsattoppivottable_32x32.png" />
     <None Include="Resources\add_16x162.png" />
     <None Include="Resources\add_32x322.png" />
     <None Include="Resources\delete_16x16.png" />
