add form + refresh

--- a/FuelStationApp/App.config
+++ b/FuelStationApp/App.config
@@ -6,9 +6,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="FuelStationApp.Properties.Settings.FuelStationDBConnectionString"
-      connectionString="Data Source=DESKTOP-RBO4TE8;Initial Catalog=FuelStationDB;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="FuelStationApp.Properties.Settings.FuelStationDBConnectionString" connectionString="Data Source=DESKTOP-RBO4TE8;Initial Catalog=FuelStationDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
@@ -61,7 +59,7 @@
                 <SvgColor Name="Brush Minor" Value="200,200,200" />
                 <SvgColor Name="Accent Paint" Value="Purple" />
                 <SvgColor Name="Accent Paint Dark" Value="84,79,118" />
-                <SvgColor Name="Accent Paint Light" Value="DarkOrange" />
+                <SvgColor Name="Accent Paint Light" Value="Violet" />
                 <SvgColor Name="Accent Paint Lighter" Value="229,227,244" />
                 <SvgColor Name="Accent Brush" Value="255,255,255" />
                 <SvgColor Name="Accent Brush Light" Value="180,177,205" />
