--- a/FuelStationApp/App.config
+++ b/FuelStationApp/App.config
@@ -57,9 +57,9 @@
                 <SvgColor Name="Brush Light" Value="120,120,120" />
                 <SvgColor Name="Brush Major" Value="160,160,160" />
                 <SvgColor Name="Brush Minor" Value="200,200,200" />
-                <SvgColor Name="Accent Paint" Value="Purple" />
+                <SvgColor Name="Accent Paint" Value="RoyalBlue" />
                 <SvgColor Name="Accent Paint Dark" Value="84,79,118" />
-                <SvgColor Name="Accent Paint Light" Value="Violet" />
+                <SvgColor Name="Accent Paint Light" Value="LightSteelBlue" />
                 <SvgColor Name="Accent Paint Lighter" Value="229,227,244" />
                 <SvgColor Name="Accent Brush" Value="255,255,255" />
                 <SvgColor Name="Accent Brush Light" Value="180,177,205" />
